@@ -236,7 +236,6 @@ extern const char *i18n_strings[NUM_LANGUAGES][NUM_I18N_STRINGS]; /**< Translati
 #define I18N_MSG_CMISC_197 197
 #define I18N_MSG_CMISC_198 198
 #define I18N_MSG_CMISC_199 199
-#define I18N_MSG_CMISC_200 200
 #define I18N_MSG_CMISC_201 201
 #define I18N_MSG_CMISC_202 202
 #define I18N_MSG_CMISC_203 203
