@@ -165,7 +165,6 @@
 197|You cannot change your title.
 198|Dragons cannot change titles.
 199|Your title is '%s'.
-200|Your title is '%s'.
 201|Your title is the default title.
 202|Title set to default.
 203|Title too long.
